[package]
name = "ada"
version = "0.1.0"
authors = ["vgl <mcx1809@126.com>"]

[dependencies]
futures = "^0.1"
futures-cpupool = "^0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
